src/test/ui/error-codes/E0370.stderr
error[E0370]: enum discriminant overflowed
  --> $DIR/E0370.rs:17:5
   |
17 |     Y, //~ ERROR E0370
   |     ^ overflowed on value after 9223372036854775807i64
   |
   = note: explicitly set `Y = -9223372036854775808i64` if that is desired outcome

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0370"
